correction of an error in the deleteEventOfId function