@@ -16,7 +16,7 @@ public class Main {
         StreamEvent thirdEvent = new StreamEvent(18, "burn", "thinking");
 
         List<StreamEvent> eventsBurn = Arrays.asList(secondEvent, thirdEvent);
-        List<StreamEvent> eventsSomething = Arrays.asList(firstEvent);
+        List<StreamEvent> eventsSomething = List.of(firstEvent);
 
         eventTypeMap.put("burn", eventsBurn);
         eventTypeMap.put("something", eventsSomething);
@@ -42,10 +42,16 @@ public class Main {
         String newData = "Speech";
 
         StreamEvent newEvent = new StreamEvent(newId, newEventType, newData);
-        List<StreamEvent> events = new ArrayList<>();
+        List<StreamEvent> events;
+
+        if (map2.get(newEventType) == null) {
+            events = new ArrayList<>();
+        } else {
+            events = map2.get(newEventType);
+        }
         events.add(newEvent);
-        map.put(newId, newEvent);
         map2.put(newEventType, events);
+        map.put(newId, newEvent);
     }
 
     public static void eventSearchById(Map<Integer, StreamEvent> map, int idSearch) {
@@ -57,24 +63,25 @@ public class Main {
     }
 
     public static void deleteEventByID(Map<Integer, StreamEvent> map,
-                                Map<String, List<StreamEvent>> map2, int id) {
+                                       Map<String, List<StreamEvent>> map2, int id) {
         if (map.get(id) != null) {
             //Поиск типа события для удаления
             String eventTypeForId = map.get(id).getEventType();
 
-            //Удаление из списка нужного события по его типу
-            map2.get(eventTypeForId).remove(map.get(id));
+            List<StreamEvent> listToDelete = map2.get(eventTypeForId);
 
+            listToDelete.remove(map.get(id));
             map.remove(id);
         }
     }
 
-    public static void allStreamEvents(Map<Integer, StreamEvent> map, Map<String, List<StreamEvent>> map2){
-        for (Map.Entry<Integer, StreamEvent> entry : map.entrySet()){
+
+    public static void allStreamEvents(Map<Integer, StreamEvent> map, Map<String, List<StreamEvent>> map2) {
+        for (Map.Entry<Integer, StreamEvent> entry : map.entrySet()) {
             System.out.println("ID события: " + entry.getKey() + " Событие: " + entry.getValue());
         }
 
-        for (Map.Entry<String, List<StreamEvent>> entry : map2.entrySet()){
+        for (Map.Entry<String, List<StreamEvent>> entry : map2.entrySet()) {
             System.out.println("Тип события: " + entry.getKey() + "  Список таких событий: " + entry.getValue());
         }
     }
